2006-07-27  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add de.

	* po/de.po: New file.  German translation from Jens Seidel.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-listmounts-main.cc
	(action_listmounts): mounts is const, to fix a GCC 4.0 compiler
	bug.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Add missing Debian-specific revisions.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: debian/copyright updates.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add vi.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.0.0.

	* NEWS: Bump version to 1.0.0.

	* configure.ac: Bump version to 1.0.0.

2006-07-20  Luk Claes  <luk@debian.org>

	* po/vi.po: Update Vietnamese translation.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* Version 0.99.4

	* debian/changelog: Update for 0.99.4

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Update translation.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item (duplictes in conffiles should be an
	error).

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth.h: Remove incorrect comment.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc
	(run_impl): Make sure setup_chroot (for EXEC_STOP and SETUP_STOP),
	clear_sigterm_handler, and clear sighup_handler are always called,
	and always called once only.

	* sbuild/sbuild-auth.cc
	(run): Make sure cred_delete and stop are always called, and
	always called once only.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-run-parts.cc (run_child): Add child exit status
	debugging output.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* Don't translate program usage messages before the locale and
	gettext have been initialised.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document SIGTERM behaviour.

	* sbuild/sbuild-session.cc