@@ -64,7 +64,7 @@ main (int   argc,
     }
   catch (...)
     {
-      sbuild::log_error() << _("An unknown exception occured") << endl;
+      sbuild::log_error() << _("An unknown exception occurred") << endl;
       exit(EXIT_FAILURE);
     }
 }
